fix mobile overflow bug

--- a/src/routes/docs/docs.styles.scss
+++ b/src/routes/docs/docs.styles.scss
@@ -14,6 +14,10 @@
   }
 }
 
+body {
+  overflow-x: hidden;
+}
+
 // custom scrollbars
 .scrollbar-y-thin,
 .scrollbar-x-thin {
